--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "styled-reset": "^4.4.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -26,6 +27,8 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "i": "^0.3.7",
+    "npm": "^9.7.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
